--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "react-native": "^0.12.0",
-    "react-native-touch-id": "^1.2.1"
+    "react-native-touch-id": "^1.2.1",
+    "superagent": "^1.4.0"
   },
   "devDependencies": {
     "standard": "^5.3.1"
