--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
+    "lodash": "^3.10.1",
     "react-native": "^0.12.0",
+    "react-native-chart": "^0.0.4",
     "react-native-touch-id": "^1.2.1",
+    "socket.io-client": "^1.3.7",
     "superagent": "^1.4.0"
   },
   "devDependencies": {
